--- a/mtgen/Pages/SingleSet.cshtml
+++ b/mtgen/Pages/SingleSet.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @using System.Linq;
 @model mtgen.Pages.SingleSetModel
 <!doctype html>
@@ -9,8 +9,8 @@
     <title>@Model.Set.Name - Magic: The Gathering: Card Generator</title>
     <meta name="Description" content="@Model.Set.Name Sealed Deck Card Generator for Magic: The Gathering">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link href="http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/css/html5reset.css" type="text/css" />
     <link rel="stylesheet" href="~/css/generator.css" type="text/css" />
     <link rel="stylesheet" href="~/lib/tingle/dist/tingle.css">
