--- a/mtgen/Pages/Index.cshtml
+++ b/mtgen/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page
 @model mtgen.Pages.IndexModel
 <!doctype html>
 <html dir="ltr" lang="en-US">
@@ -8,8 +8,8 @@
     <title>Magic: The Gathering: Sealed Deck Generator</title>
     <meta name="Description" content="Magic: The Gathering Sealed Deck Card Generator: Generate accurate random Magic: The Gathering boosters and other such madness.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link href="http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="~/css/html5reset.css" type="text/css" />
     <link rel='stylesheet' href='@Url.Content("~/css/home.css")' type='text/css' />
     <link rel="prerender" href="//mtgen.net/@Model.AllSets.NewestCurrentSet.Code/">
