Added IsHidden option to sets and used it to hide the newly added STA set which is part of STX but has no separate generator.

--- a/mtgen/Pages/Index.cshtml
+++ b/mtgen/Pages/Index.cshtml
@@ -32,6 +32,7 @@
     <main>
         @foreach (var set in @Model.AllSets.SortedGroupedBlocksAndSets)
         {
+            @if (set.IsHidden) continue;
             @if (set.IsBlockSet)
             {
                 <div class="block">
