--- a/mtgen/wwwroot/usg/set.css
+++ b/mtgen/wwwroot/usg/set.css
@@ -4,3 +4,7 @@ body {
 header .set-name {
 	background-image: url(images/logo-word.png);
 }
+#card-count {
+	color: rgba(255,255,255,1);
+	text-shadow: 1px 1px 1px #000;
+}
