Toned down the foil effect so the cards are easier to read

--- a/mtgen/wwwroot/css/generator.css
+++ b/mtgen/wwwroot/css/generator.css
@@ -525,6 +525,7 @@ main {
         bottom: 0;
         content: "";
         left: 0;
+        opacity: .7;
         position: absolute;
         right: 0;
         top: 0;
