--- a/mtgen/Pages/Shared/_ga.cshtml
+++ b/mtgen/Pages/Shared/_ga.cshtml
@@ -1,8 +1,6 @@
-﻿    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-25921884-1', 'auto');
-      ga('send', 'pageview');
+﻿    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N59JCB8S7E"></script>
+    <script>window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-N59JCB8S7E');
     </script>
