Refactor: implemented github @goblin's changes as v3:
    - allow mtg-generator-lib.js to run from the command line
    - generate packs via RNG seeds, allowing the UI to provide them under debug mode
    - removed setCardCount param as it was never used
    - moved main web call (runBrowser())) to mtg-generator.web.js as it only had browser-specific calls in it
    - return from generateCardSetFromPacks() now a wrapper object that includes the seed
    - generate packs via RNG seeds, allowing the UI to provide them under debug mode
    - renamed this file from mtg-generator.js to mtg-generator-web.js to reflect its status as one possible interface
    - removed setCardCount param as it was never used
    - added main web call (runBrowser())) to this file instead of the main mtg-generatior-lib.js file as it only had browser-specific calls in it
    - got rid of all HTML IDs that aren't unique, replacing them with classes
    - refeactored renderInput (now called renderBoosterSelectors) to be simpler, use <template>, and use iteration instead of labelling everything with specific ids and data

--- a/mtgen/Pages/SingleSet.cshtml
+++ b/mtgen/Pages/SingleSet.cshtml
@@ -71,28 +71,28 @@
     <script src="~/lib/underscore/underscore-min.js"></script>
     <script src="~/lib/backbone/backbone.js"></script>
     <script src="~/lib/tingle/dist/tingle.js?v0.16.0"></script>
-    <script src="~/lib/mtg-generator-lib.js?v2.7.3"></script>
-    <script src="~/lib/mtg-generator.js?v=2.7.3"></script>
+    <script src="~/lib/mtg-generator-lib.js?v3.0.0"></script>
+    <script src="~/lib/mtg-generator-web.js?v3.0.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.4/holder.min.js"></script>
     <script>
         $(document).ready(function () {
-            mtgGen.run({
+            mtgGen.runBrowser({
                 setCode: "@Model.Set.Code"
                 , setFile: "@Model.Set.SetFile"
                 , cardFiles: [ @Html.Raw(string.Join(", ", Model.Set.CardFiles.Select(cardFile => $"'/{Model.Set.Code}/{cardFile}'"))) ]
                 , packFiles: [ @Html.Raw(string.Join(", ", Model.Set.PackFiles.Select(packFile => $"'/{Model.Set.Code}/{packFile}'"))) ]
                 , productFile: "/@Model.Set.Code/@Model.Set.ProductFile"
                 , startProductName: "@Model.Set.StartProductName"
-                , setCardCount: "@Model.Set.CardCount"
+                , drawId: mtgGen.getQuerystringParamByName('drawId')
+                , debug: mtgGen.getQuerystringParamByName('debug')
                 , contentElem: "main"
-                , flags: { debug: mtgGen.getQuerystringParamByName('debug') }
             });
 
             // Modal popup support.
             window.modal = new tingle.modal({});
 
             // Dynamic card loading counts
-            document.querySelector('#card-count .total').textContent = mtgGen.setCardCount;
+            document.querySelector('#card-count .total').textContent = @Model.Set.CardCount;
             const currentCardCountEl = document.querySelector('#card-count .current');
             window.addEventListener('playableCardLoaded', e => currentCardCountEl.textContent = e.detail.setCardsLoadedCount, false);
 
@@ -118,7 +118,7 @@
                 gtag('event', 'LoadDraw', { 'set_code': e.detail.setCode.toUpperCase(), 'product': currProduct.textContent, 'draw_id': e.detail.drawId }), false);
             window.addEventListener('exporting', e =>
                 gtag('event', 'Export', { 'set_code': e.detail.setCode.toUpperCase(), 'product': currProduct.textContent, 'draw_id': e.detail.drawId }), false);
-            
+
             // "Read more" support in top news section
             document.querySelector('aside.info').addEventListener('click', event => {
                 if (event.target.classList.contains('update-more')) {
