Fixed HTML validation issues
https://validator.w3.org/nu/?doc=https%3A%2F%2Fmtgen.net%2Fdmr

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,11 +1,11 @@
 ﻿    <meta name="Description" content="About this Magic: The Gathering Sealed/Booster Card Generator: Generate accurate random Magic: The Gathering boosters and other such madness.">
-    <link rel="stylesheet" href="/css/home.css" type="text/css" />
+    <link rel="stylesheet" href="/css/home.css" type="text/css">
     {{> favicons}}
     {{> ga}}
 </head>
 <body>
     <header>    
-        <img src="/images/logo-mtg.png" alt="Magic the Gathering" />
+        <img src="/images/logo-mtg.png" alt="Magic the Gathering">
         <h1>Sealed Deck Card Generator</h1>
         <h2>Generate accurate random Magic: The Gathering boosters and other such madness.</h2>
         <div class="links">
@@ -25,6 +25,6 @@
         <p class="twitter-follow">
             Want the latest updates? Follow <a href="https://twitter.com/mtggen" target="_blank">@mtggen on Twitter</a> or <a href="http://eepurl.com/bbdyO5">subscribe to the email update list</a>.
         </p>
-        <hr/>
+        <h>
         <p>12-Nov-2014: This project has now been <a href="https://github.com/copperdogma/mtgen">open sourced on Github</a>. I will continue creating new generators as new sets come out, but if you have something you wish to contribute I'd love to hear from you. Enjoy!</p>
     </main>
