--- a/views/layouts/main-layout.hbs
+++ b/views/layouts/main-layout.hbs
@@ -1,13 +1,13 @@
 <!doctype html>
 <html dir="ltr" lang="en-US">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{pageTitle}}Magic: The Gathering: Sealed/Booster Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="//fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/css/html5reset.css" type="text/css" />
+    <link rel="stylesheet" href="/css/html5reset.css" type="text/css">
     {{{ body }}}
     <footer>
         <p>Created by: Cam Marsollier - <a href="mailto:cam.marsollier@gmail.com">cam.marsollier@gmail.com</a> - <a href="/about">About me and this site.</a></p>
