--- a/views/partials/set-summary.hbs
+++ b/views/partials/set-summary.hbs
@@ -3,7 +3,7 @@
 {{/if}}
 <div class="set {{#if IsCurrentSet}}current{{/if}} {{#if IsFutureSet}}future{{/if}}">
   <div class="set-logo">
-    <img src="/{{codeLowerCase}}/images/{{image}}" title="{{name}}" alt="{{name}} logo" />
+    <img src="/{{codeLowerCase}}/images/{{image}}" title="{{name}}" alt="{{name}} logo">
   </div>
   <div class="set-name">{{name}}</div>
   <div class="set-count">{{cardCount}} cards</div>
