--- a/views/all-sets.hbs
+++ b/views/all-sets.hbs
@@ -1,5 +1,5 @@
 ﻿    <meta name="Description" content="Magic: The Gathering Sealed/Booster Generator: Generate accurate random Magic: The Gathering boosters and other such madness.">
-    <link rel='stylesheet' href='/css/home.css' type='text/css' />
+    <link rel='stylesheet' href='/css/home.css' type='text/css'>
     <link rel="prerender" href="//mtgen.net/@Model.AllSets.NewestCurrentSet.Code/">
     <link rel="dns-prefetch" href="//media.wizards.com">
     {{> favicons}}
@@ -7,7 +7,7 @@
 </head>
 <body class="home">
     <header>
-        <img src="/images/logo-mtg.png" alt="Magic the Gathering" />
+        <img src="/images/logo-mtg.png" alt="Magic the Gathering">
         <h1>Sealed Deck Card Generator</h1>
         <h2>Generate accurate random Magic: The Gathering boosters and other such madness.</h2>
         <div class="links">
