--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,11 +1,11 @@
     <meta name="Description" content="mtgen.net - {{errDesc}}">
-    <link rel="stylesheet" href="/css/home.css" type="text/css" />
+    <link rel="stylesheet" href="/css/home.css" type="text/css">
     {{> favicons}}
     {{> ga}}
 </head>
 <body class="error">
     <header>
-        <img src="/images/logo-mtg.png" alt="Magic the Gathering" />
+        <img src="/images/logo-mtg.png" alt="Magic the Gathering">
         <h1>Sealed Deck Card Generator</h1>
         <h2>Generate accurate random Magic: The Gathering boosters and other such madness.</h2>
         <div class="links">
