Bugfix: ONE would fail trying to load its json card files
This was a WEIRD one. If you went to the set directly, it would try to load https://mtgen.net/one/one/cardsMain.json, but if you went via the home page it wouldn't. And all of the other sets worked.

--- a/views/single-set.hbs
+++ b/views/single-set.hbs
@@ -50,9 +50,9 @@
             mtgGen.runBrowser({
                 setCode: "{{codeLowerCase}}"
                 , setFile: "{{setFile}}"
-                , cardFiles: [{{#cardFiles}} '{{@root.codeLowerCase}}/{{.}}',{{/cardFiles}}]
-                , packFiles: [{{#packFiles}} '{{@root.codeLowerCase}}/{{.}}',{{/packFiles}}]
-                , productFile: '{{codeLowerCase}}/{{productFile}}'
+                , cardFiles: [{{#cardFiles}} '/{{@root.codeLowerCase}}/{{.}}',{{/cardFiles}}]
+                , packFiles: [{{#packFiles}} '/{{@root.codeLowerCase}}/{{.}}',{{/packFiles}}]
+                , productFile: '/{{codeLowerCase}}/{{productFile}}'
                 , startProductName: "{{startProductName}}"
                 , drawId: mtgGen.getQuerystringParamByName('drawId')
                 , debug: mtgGen.getQuerystringParamByName('debug')
